2010-03-10  Miguel de Dios  <miguel.dedios@artica.es>

	* util/pandora_xml_stress.conf: deleted conf file, I upload by fail.

2010-03-10  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Set tagente_estado.current_interval to
	  tagente.intervalo if tagente_modulo.module_interval is 0.

2010-03-08  Pablo de la Concepción <pablo.concepcion@artica.es>

	* lib/PandoraFMS/GIS.pm, lib/PandoraFMS/GeoIP.pm: Modified to put
	MaxMind GeoIP PurePerl GPL library into PandoraFMS package.

2010-03-04  Sancho Lerena <slerena@artica.es>

	* conf/pandora_server.conf: Several typos and better formating.

	* util/change_remoteconfig.pl: Tool to massive edit the server IP 
	in remote configuration files. Could be modified to alter any other
	fixed field.

	* util/gpx2pandora_agent_data.pl: Transform a standard GPX GIS data
	file in several Pandora FMS XML data server compatible files with GIS
	data.

	* util/gis.README: Small "documentation" on how to start to using GIS
	in the Server.


2010-03-04  Pablo de la Concepción <pablo.concepcion@artica.es>

	* conf/pandora_server.conf: Corrected typo 
	
2010-03-04  Pablo de la Concepción <pablo.concepcion@artica.es>

	* lib/PandoraFMS/Server.pm: Added spaces between server name and server
	type on the event generation string.

	* lib/PandoraFMS/GeoIP.pm: MaxMind GeoIP PurePerl GPL library to access
	reverse geoip data.

	* lib/PandoraFMS/GIS.pm: Modified to use GeoIP.pm

	* lib/PandoraFMS/DataServer.pm: Moved log line in case parent_agent_name
	is not defined

2010-03-03  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Added 'matches_value' support to 'onchange'
	  alerts.

2010-03-02  Raúl Mateos  <raulofpandora@gmail.com>

        * util/tentacle_serverd, util/pandora_server: Updated year. Changed
	spaces to tabs.

	* bin/tentacle_server: Updated year. Updated URL for documentation.

2010-02-27  Sancho Lerena <slerena@artica.es>

        * util/tentacle_serverd,